cocos2d-x-3.0rc0 Feb.?? 2014
[All]
     [NEW]          Adds Dutch Language support.
     [NEW]          Console: Added 'resolution', 'projection' commands. Improved API
     [NEW]          Director: Displays 'Vertices drawn' in the stats. Useful to measure performance.
     [NEW]          Using python to automatically generate script bindings codes.
     
     [FIX]          Node::setRotation() moves opposite when node has a physics body.
     [FIX]          A string which only contains CJK characters can't make a line-break when it's needed.
     [FIX]          EGLView improvements: renamed to GLView, no longer a singleton, easier to customize
     [FIX]          Removes samples except testcpp|testjavascript|testlua. Moves sample games to `cocos2d/samples` repo.
     [FIX]          cc.BuilderReader.load( path, null, parentSize ); was not allowed.

cocos2d-x-3.0beta2 Jan.24 2014
[All]
     [NEW]          Full screen support for desktop platforms.
     [NEW]          Adds performance test for EventDispatcher.
     [NEW]          Adds performance test for Containers(Vector<>, Array, Map<K,V>, Dictionary).
     [NEW]          DrawNode supports to draw triangle, quad bezier, cubic bezier.
     [NEW]          Console: added the 'textures', 'fileutils dump' and 'config' commands
     [NEW]          GLCache: glActiveTexture() is cached with GL::activeTexture(). All code MUST call the cached version in order to work correctly
     [NEW]          Label: Uses a struct of TTF configuration for Label::createWithTTF to reduce parameters and make this interface more easily to use.
     [NEW]          Label: Integrates LabelAtlas into new Label.
     [NEW]          Node: Added `setGlobalZOrder()`. Useful to change the Node's render order. Node::setZOrder() -> Node::setLocalZOrder()
     [NEW]          Renderer: Added BatchCommand. This command is not "batchable" with other commands, but improves performance in about 10%
     