@@ -3963,7 +3963,8 @@
 "cocos/scripting/lua/bindings/LuaOpengl.h",
 "cocos/scripting/lua/bindings/CCLuaValue.cpp",
 "cocos/scripting/lua/bindings/lua_cocos2dx_spine_manual.cpp",
-"cocos/scripting/CMakeLists.txt",
+"cocos/scripting/lua/CMakeLists.txt",
+"cocos/scripting/javascript/CMakeLists.txt",
 "cocos/scripting/auto-generated/lua-bindings/lua_cocos2dx_studio_auto.hpp",
 "cocos/scripting/auto-generated/lua-bindings/lua_cocos2dx_spine_auto.hpp",
 "cocos/scripting/auto-generated/lua-bindings/lua_cocos2dx_studio_auto.cpp",
